--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -1,10 +1,42 @@
 .wrapper {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
   margin: 0px auto;
-  padding: 20px 0px;
+  padding: 40px 0px;
   text-align: center;
 }
 
 .text {
   margin-top: 20px;
   font-size: 17px;
+}
+
+.button{
+    display: flex;
+
+      align-items: center;
+      justify-content: center;
+      padding: 6px 15px;
+      border: 1px solid #2b86c5;
+      border-radius: 5px;
+      background-color: #ff3cac;
+      background-image: linear-gradient(225deg,
+          #2b86c5 0%,
+          #784ba0 50%,
+          #ff3cac 100%);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+      margin: 15px 20px 15px 0;
+      color: #fff;
+      font-size: 0.8rem;
+      font-weight: 500;
+      text-decoration: none;
+      letter-spacing: 1px;
+      opacity: 0.8;
+      min-width: 30px;
+      
 }
